--- a/requirements.txt
+++ b/requirements.txt
@@ -2,16 +2,17 @@
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 
-# Database
+# Database - use pre-compiled versions
 sqlalchemy==2.0.23
 alembic==1.12.1
 psycopg2-binary==2.9.9
 asyncpg==0.29.0
 
-# Authentication and security
+# Authentication and security - use pre-compiled versions
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 python-multipart==0.0.6
+cryptography==41.0.7
 
 # Validation and serialization
 pydantic==2.5.0
